tests/NormalTests/paczka1/fuzzy1/57972246.err
Error in line 2: 1EEclyD A445 68,5
Error in line 9: 4X5C0K A445 52,6
Error in line 10: oG59O9U A445 8,3
Error in line 19: A445 A445 80,1
Error in line 27: aGeAOvAp A445 86,0
Error in line 37: @X5C0K A@@5 93,7
Error in line 31: 4X5C0K S996 66,5
